--- a/tw-agenda-fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
@@ -8,8 +8,7 @@
 <?import javafx.scene.control.*?>
 <?import javafx.scene.shape.*?>
 
-
-<VBox maxHeight="420.0" maxWidth="600.0" minHeight="420.0" minWidth="600.0" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1">
+<VBox maxHeight="420.0" maxWidth="600.0" minHeight="420.0" minWidth="600.0" prefHeight="420.0" prefWidth="600.0" xmlns="http://javafx.com/javafx/8" xmlns:fx="http://javafx.com/fxml/1" fx:controller="br.com.johabfreitas.agenda.fx.MainController">
    <children>
       <Pane prefHeight="50.0" prefWidth="600.0" style="-fx-background-color: #bbb;">
          <children>
@@ -22,16 +21,16 @@
       </Pane>
       <Pane prefHeight="200.0" prefWidth="200.0" style="-fx-background-color: #eee;">
          <children>
-            <TableView layoutX="9.0" layoutY="12.0" prefHeight="154.0" prefWidth="583.0">
+            <TableView fx:id="tabelaContatos" layoutX="9.0" layoutY="12.0" prefHeight="154.0" prefWidth="583.0">
               <columns>
                 <TableColumn editable="false" prefWidth="266.0" text="Nome" />
                 <TableColumn editable="false" prefWidth="122.0" text="Idade" />
                   <TableColumn editable="false" prefWidth="193.0" text="Telefone" />
               </columns>
             </TableView>
-            <Button layoutX="9.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Incluir" />
-            <Button layoutX="150.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Alterar" />
-            <Button layoutX="288.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Excluir" />
+            <Button fx:id="botaoIncluir" layoutX="9.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Incluir" />
+            <Button fx:id="botaoAlterar" layoutX="150.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Alterar" />
+            <Button fx:id="botaoExcluir" layoutX="288.0" layoutY="171.0" mnemonicParsing="false" prefHeight="25.0" prefWidth="130.0" text="Excluir" />
          </children>
       </Pane>
       <TitledPane collapsible="false" prefHeight="172.0" prefWidth="600.0" text="Informações de contato">
@@ -51,27 +50,27 @@
                   <Label text="Nome:" />
                   <Label text="Idade:" GridPane.columnIndex="1" />
                   <Label text="Telefone:" GridPane.columnIndex="2" />
-                  <TextField GridPane.rowIndex="1">
+                  <TextField fx:id="txfNome" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="1" GridPane.rowIndex="1">
+                  <TextField fx:id="txfIdade" GridPane.columnIndex="1" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets right="10.0" />
                      </GridPane.margin>
                   </TextField>
-                  <TextField GridPane.columnIndex="2" GridPane.rowIndex="1">
+                  <TextField fx:id="txfTelefone" GridPane.columnIndex="2" GridPane.rowIndex="1">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </TextField>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="158.0" text="Salvar" GridPane.columnIndex="2" GridPane.rowIndex="2">
+                  <Button fx:id="botaoSalvar" mnemonicParsing="false" prefHeight="25.0" prefWidth="158.0" text="Salvar" GridPane.columnIndex="2" GridPane.rowIndex="2">
                      <GridPane.margin>
                         <Insets />
                      </GridPane.margin>
                   </Button>
-                  <Button mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button fx:id="botaoCancelar" mnemonicParsing="false" prefHeight="25.0" prefWidth="144.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </content>
