--- a/tw-agenda-fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
+++ b/tw-agenda-fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
@@ -85,6 +85,7 @@
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="botaoCancelar" mnemonicParsing="false" onAction="#boataoCancelar_Action" prefHeight="25.0" prefWidth="144.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" text="Configurar Banco de Dados" GridPane.rowIndex="2" />
                </children>
             </GridPane>
          </content>
