--- a/tw_agenda_fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
+++ b/tw_agenda_fx/src/br/com/johabfreitas/agenda/fx/Main.fxml
@@ -59,6 +59,7 @@
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                 <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                  <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
               </rowConstraints>
                <children>
                   <Label text="Nome:" />
@@ -85,7 +86,8 @@
                      </GridPane.margin>
                   </Button>
                   <Button fx:id="botaoCancelar" mnemonicParsing="false" onAction="#boataoCancelar_Action" prefHeight="25.0" prefWidth="144.0" text="Cancelar" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                  <Button mnemonicParsing="false" onAction="#btnExportarContatos_Action" prefHeight="25.0" prefWidth="135.0" text="Exportar" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btnExportarContatos_Action" prefHeight="25.0" prefWidth="259.0" text="Exportar" GridPane.rowIndex="2" />
+                  <Button mnemonicParsing="false" onAction="#btnImportarContatos_Action" prefHeight="25.0" prefWidth="259.0" text="Importar" GridPane.rowIndex="3" />
                </children>
             </GridPane>
          </content>
